--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "question-and-answer-message-board",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for question-and-answer-message-board goes here",
+  "description": "This is a web application that enables users to post questions and give answers to posted questions.",
   "license": "MIT",
-  "author": "",
+  "author": "Carol Wanjohi <wanjohi.carol54@gmail.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -36,6 +36,7 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
     "ember-welcome-page": "^3.0.0",
+    "emberfire": "^2.0.8",
     "loader.js": "^4.2.3"
   },
   "engines": {
